Fix changes in Lucene 10.5 API